--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+body {
+    background: lightgrey;
+}
+
 h1 {
     font-size: 72px;
     color: red;
-    background-color: white;
 }
+@media screen and (max-width: 768px) {
+
+    body {
+      background-color: orange;
+    }
+   }
