--- a/assets/style.css
+++ b/assets/style.css
@@ -22,8 +22,9 @@ h1 {
     margin-right: 25px;
 }
 img {
+    margin-top: 50px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 25%;
 }
