--- a/assets/style.css
+++ b/assets/style.css
@@ -29,8 +29,8 @@ h1 {
 }
 
 img {
-    margin-top: 50px;
-    display: inline-block;
-    margin-bottom: 20px;
+    display: block;
     width: 25%;
+    margin: auto;
+    padding-bottom: 20px;
 }
